# NeuralNetwork

./: CMakeLists.txt  test_long.txt
includes/: Network.h  NeuralNetwork.h  Neuron.h  TrainingData.h
src/: Network.cpp  NeuralNetwork.cpp  Neuron.cpp  TrainingData.cpp
